--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -36,16 +36,19 @@ img {
   clear: both;
   visibility: hidden;
 }
-
+html,body{
+  width: 100%;
+  height: 100%;
+}
 // header css
 header {
   width: 100%;
-  height: 130px;
   margin: 0;
   padding: 0;
   z-index: 999;
   top: 0;
   background: black;
+  position: fixed;
   .inner {
     width: 90%;
     height: 80px;
@@ -114,7 +117,6 @@ header {
 
 // 导航
 header nav {
-  height: 50px;
   width: 100%;
   background: #464646;
   text-align: center;
@@ -155,6 +157,7 @@ header nav {
   width: 100%;
   position: absolute;
   background-color: #fff;
+  z-index: 100;
   .man-top,
   .man-bot {
     max-width: 1000px;
@@ -182,14 +185,82 @@ header nav {
     background: #b7b7b7;
   }
 }
-
+.mask_layer {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 99;
+  display: none;
+}
+.man ul li:hover span{
+  text-decoration: underline;
+  color: #aaa;
+}
 //内容
 
 // 广告条
 .banner {
+  color: #333;
+  font-size: 100%;
+  vertical-align: baseline;
+  height: auto;
+  position: relative;
+  margin: 0 auto;
   width: 100%;
-  height: 56px;
-  background: chartreuse;
+  a {
+    color: #222;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .nav-notice {
+    padding: 15px 0;
+    .swiper-duration {
+      border: 0;
+      position: relative;
+      overflow: hidden;
+      max-width: 1200px;
+      width: 100%;
+      margin: 0 auto;
+      height: 28px;
+    }
+  }
+}
+
+.swiper-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  box-sizing: content-box;
+  .swiper-slide {
+    flex-shrink: 0;
+    height: 100%;
+    position: absolute;
+    color: #df0300;
+    font-size: 15px;
+    text-align: center;
+    line-height: 33px;
+    width: 100%;
+    a {
+      display: block;
+      max-width: 1200px;
+      text-align: center;
+      outline: medium none;
+      overflow: hidden;
+      color: #222;
+      font-size: 12px;
+      line-height: 14px;
+      margin: 0 auto;
+    }
+  }
+  .move_two{
+    left: 100%;
+  }
+  .move_three{
+    left: 200%;
+  }
 }
 //幻灯片
 .slide {
@@ -528,6 +599,7 @@ footer {
   position: relative;
   background-color: #000;
   color: #fff;
+
   .inner {
     margin: 0 auto;
     max-width: 1000px;
@@ -546,10 +618,26 @@ footer {
       width: 133px;
       height: 100px;
       position: absolute;
-      background: url(https://image.converse.com.cn/images/commons/header-footer-new2.png) 0 0 no-repeat transparent;
+      background: url(../img/header-footer-new2.png) 0 0 no-repeat;
       left: 50%;
       top: 22%;
       margin: -10px 0 0 -66px;
+      transform: scale(0.5);
+    }
+    .footer-bottom {
+      display: block;
+      margin: 12px auto;
+      position: absolute;
+      text-align: center;
+      width: 100%;
+      left: 0;
+      bottom: 40px;
+    }
+    .tip-for-fraud img {
+      display: block;
+      width: 60px;
+      margin: 0 auto;
+      cursor: pointer;
     }
   }
 }
