--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -36,7 +36,8 @@ img {
   clear: both;
   visibility: hidden;
 }
-html,body{
+html,
+body {
   width: 100%;
   height: 100%;
 }
@@ -67,7 +68,7 @@ header {
     // 登陆注册
     .logo-rgt {
       float: right;
-      margin: 30px 0 0 0;
+      margin: 22px 0 0 0;
       ul li {
         float: left;
         color: white;
@@ -188,12 +189,12 @@ header nav {
 .mask_layer {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 10000%;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 99;
   display: none;
 }
-.man ul li:hover span{
+.man ul li:hover span {
   text-decoration: underline;
   color: #aaa;
 }
@@ -201,66 +202,31 @@ header nav {
 
 // 广告条
 .banner {
-  color: #333;
-  font-size: 100%;
-  vertical-align: baseline;
-  height: auto;
-  position: relative;
-  margin: 0 auto;
-  width: 100%;
-  a {
-    color: #222;
-    font-size: 12px;
-    line-height: 14px;
-  }
-  .nav-notice {
-    padding: 15px 0;
-    .swiper-duration {
-      border: 0;
-      position: relative;
-      overflow: hidden;
-      max-width: 1200px;
-      width: 100%;
+  .inner {
+    width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    height: 33px;
+    padding: 20px;
+    overflow: hidden;
+    .swiper-slide {
+      position: absolute;
+      width: 1200px;
       margin: 0 auto;
-      height: 28px;
     }
+  }
+  a {
+    display: block;
+    color: #333;
+    text-align: center;
+    margin: 0 auto;
   }
 }
-
-.swiper-wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  display: flex;
-  box-sizing: content-box;
-  .swiper-slide {
-    flex-shrink: 0;
-    height: 100%;
-    position: absolute;
-    color: #df0300;
-    font-size: 15px;
-    text-align: center;
-    line-height: 33px;
-    width: 100%;
-    a {
-      display: block;
-      max-width: 1200px;
-      text-align: center;
-      outline: medium none;
-      overflow: hidden;
-      color: #222;
-      font-size: 12px;
-      line-height: 14px;
-      margin: 0 auto;
-    }
-  }
-  .move_two{
-    left: 100%;
-  }
-  .move_three{
-    left: 200%;
-  }
+.move_two {
+  left: 100%;
+}
+.move_three {
+  left: 200%;
 }
 //幻灯片
 .slide {
@@ -269,11 +235,18 @@ header nav {
   padding-bottom: 36px;
   overflow: hidden;
   .pic {
+    position: relative;
+    height: 676px;
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
     .hid {
-      display: none;
+      opacity: 0;
     }
     .show {
-      display: block;
+      opacity: 1;
     }
   }
   // 左箭头
@@ -353,6 +326,94 @@ header nav {
     }
   }
 }
+// 热卖单品
+
+// 热卖单品的标题
+.selling-item .inner {
+  max-width: 1000px;
+  margin: 0 auto;
+  .title {
+    width: 100%;
+    height: 30px;
+    margin: 20px auto;
+    position: relative;
+    text-align: center;
+    h1 {
+      background: none repeat scroll 0 0 #fff;
+      display: inline-block;
+      zoom: 1;
+      height: 30px;
+      line-height: 30px;
+      margin: 0 auto;
+      padding: 0 4%;
+      position: relative;
+      font-size: 30px;
+    }
+  }
+  .title::before {
+    background-color: #b7b7b7;
+    content: "";
+    height: 1px;
+    left: 1.5%;
+    position: absolute;
+    top: 17px;
+    width: 97%;
+  }
+}
+// 热卖单品的图片
+.selling-item .inner .pic {
+  ul {
+    overflow: hidden;
+    li {
+      width: 25%;
+      float: left;
+      margin-top: 20px;
+      text-align: center;
+      span {
+        display: block;
+        color: #333;
+        overflow: hidden;
+        font-size: 24px;
+        line-height: 30px;
+      }
+    }
+    li:hover span{
+      text-decoration: underline;
+    }
+  }
+}
+// 线
+.selling-item .inner .line {
+  margin-top: 20px;
+  height: 20px;
+  position: relative;
+  .line-con {
+    width: 39px;
+    height: 21px;
+    position: absolute;
+    background: url(https://image.converse.com.cn/images/homepage/active.png) no-repeat scroll 0 0 transparent;
+    top: 0;
+    left: 10%;
+  }
+}
+.selling-item .inner .line::before {
+  width: 97%;
+  background-color: #b7b7b7;
+  height: 1px;
+  position: absolute;
+  top: 0;
+  left: 1.5%;
+  content: "";
+}
+// 图片下面的内容
+.selling-item .inner .pic_cont {
+  .list-slice {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+}
+
 // 街头
 .street {
   width: 100%;
