--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -152,6 +152,7 @@ header nav {
 
 //二级导航
 //男的下面的二级导航
+
 .man {
   display: none;
   height: 262px;
@@ -377,7 +378,7 @@ header nav {
         line-height: 30px;
       }
     }
-    li:hover span{
+    li:hover span {
       text-decoration: underline;
     }
   }
@@ -406,11 +407,84 @@ header nav {
   content: "";
 }
 // 图片下面的内容
-.selling-item .inner .pic_cont {
-  .list-slice {
-    width: 100%;
+.pic_cont {
+  position: relative;
+  padding-top: 50px;
+  height: 540px;
+  .list-slice-all {
+    overflow: hidden;
+    padding-bottom: 30px;
+  }
+  .l-s-p {
+    position: absolute;
+    width: 1000px;
+    top: 50px;
+    z-index: 5;
+  }
+  .list-slice-top {
+    border-bottom: 1px dashed #ccc;
+  }
+  dl {
+    float: left;
+    width: 25%;
+    dd {
+      text-align: center;
+      margin-top: 10px;
+    }
+    a {
+      color: black;
+      img {
+        width: 160px;
+        height: 160px;
+        display: block;
+        margin: 0 auto;
+      }
+    }
+  }
+  .show {
+    opacity: 1;
+    display: block;
+  }
+  .hid {
+    opacity: 0;
+    display: none;
+  }
+  .examine {
+    width: auto;
     height: auto;
-    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    a {
+      line-height: 48px;
+      font-size: 16px;
+      height: 48px;
+      padding: 0 25px;
+      border: 1px solid #000;
+      text-align: center;
+      display: inline-block;
+      width: 42%;
+      background-color: #000;
+      color: #fff;
+      box-sizing: border-box;
+      transition: all 0.3s;
+    }
+    a::after {
+      background: url(https://image.converse.com.cn/images/commons/sprites_header_footer.png) no-repeat -9px -163px;
+      width: 20px;
+      height: 30px;
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: 15px;
+      content: "";
+      transition: all 0.3s;
+    }
+    a:hover {
+      color: black;
+      background-color: #fff;
+    }
+    a:hover::after {
+      background: url(https://image.converse.com.cn/images/commons/sprites_header_footer.png) no-repeat -44px -163px;
+    }
   }
 }
 
