--- a/src/sass/detail.css
+++ b/src/sass/detail.css
@@ -1,10 +1,7 @@
-main {
-  margin-top: 130px;
-}
-
 main .inner {
   width: 1000px;
   margin: 0 auto;
+  margin-top: 210px;
   overflow: hidden;
 }
 
@@ -29,6 +26,7 @@ main .inner a {
   font-size: 14px;
   color: #333;
   position: relative;
+  overflow: hidden;
 }
 
 .pic-warp .tab .share i {
@@ -39,10 +37,190 @@ main .inner a {
   position: absolute;
 }
 
+.pic-warp .tab .share span {
+  float: left;
+  text-indent: 40px;
+}
+
+.pic-warp .ensh {
+  margin-top: 20px;
+  height: 30px;
+  width: auto;
+  line-height: 30px;
+  font-size: 14px;
+  color: #333;
+  position: relative;
+}
+
+.pic-warp .ensh i {
+  background: url(https://image.converse.com.cn/images/detail/detail.png) no-repeat 0 -43px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  overflow: hidden;
+}
+
+.pic-warp .ensh span {
+  text-indent: 40px;
+  float: left;
+}
+
+.pic-warp .eva {
+  margin-top: 20px;
+  overflow: hidden;
+  position: relative;
+}
+
+.pic-warp .eva span {
+  float: left;
+  width: 100px;
+  height: 30px;
+  background: url(https://image.converse.com.cn/images/detail/stars.png) repeat-x 0 0;
+  overflow: hidden;
+  display: block;
+  text-indent: 40px;
+}
+
 .pic-warp .pic {
   float: right;
+  position: relative;
+}
+
+.pic-warp .pic .title {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.pic-warp .pic .title h1 {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.pic-warp .pic .title span {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.pic-warp .pic .bf {
+  height: 550px;
+  width: 200px;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: -200px;
+  display: none;
+}
+
+.pic-warp .pic .bf img {
+  width: 1600px;
+  height: 1600px;
+  position: absolute;
+}
+
+.pic-warp .pic .spic {
+  margin-top: 70px;
+  margin-left: 60px;
+  position: relative;
+}
+
+.pic-warp .pic .spic img {
+  width: 480px;
+  height: 480px;
+}
+
+.pic-warp .pic .spic .sf {
+  width: 40px;
+  height: 150px;
+  background: #fff;
+  opacity: 0.6;
+  position: absolute;
+  bottom: 0;
+  left: 200px;
+  cursor: move;
+  display: none;
+}
+
+.list-pic {
+  overflow: hidden;
+  margin-left: 60px;
+}
+
+.list-pic a {
+  margin-top: 20px;
+  margin-left: 10px;
+  float: left;
+}
+
+.list-pic a img {
+  padding: 5px;
+  display: block;
+  width: 60px;
+  height: 60px;
+}
+
+.list-pic a .border {
+  border: 1px solid #ccc;
 }
 
 .by-warp {
+  float: right;
+  width: 200px;
+  margin-top: 180px;
+}
+
+.by-warp select {
+  width: 90px;
+  text-align: center;
+}
+
+.by-warp select option {
+  text-align: center;
+}
+
+.by-warp .chima,
+.by-warp .amount {
+  overflow: hidden;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.by-warp .chima b,
+.by-warp .amount b {
+  height: 30px;
+  width: 90px;
+  color: #333;
+  font-size: 12px;
+  line-height: 30px;
   float: left;
+}
+
+.by-warp .chima input,
+.by-warp .amount input {
+  float: right;
+  height: 30px;
+  width: 90px;
+  text-align: center;
+  line-height: 30px;
+  border: 1px solid #ccc;
+}
+
+.by-warp .btn span {
+  font-size: 16px;
+  color: #fff;
+  display: block;
+  background-color: #940000;
+  font-weight: bold;
+  text-align: center;
+  height: 50px;
+  width: 200px;
+  line-height: 50px;
+  cursor: pointer;
+  margin-bottom: 2px;
+}
+
+.by-warp .btn span:hover {
+  opacity: .8;
 }
