--- a/src/sass/detail.scss
+++ b/src/sass/detail.scss
@@ -1,8 +1,8 @@
 main {
-  margin-top: 130px;
   .inner {
     width: 1000px;
     margin: 0 auto;
+    margin-top: 210px;
     overflow: hidden;
     a {
       color: black;
@@ -12,9 +12,11 @@ main {
 .pic-warp {
   float: left;
   position: relative;
+  // 左边模块
   .tab {
     float: left;
     width: 200px;
+    // 分享
     .share {
       height: 30px;
       width: auto;
@@ -22,19 +24,184 @@ main {
       font-size: 14px;
       color: #333;
       position: relative;
-      i{
-        background: url(https://image.converse.com.cn/images/detail/detail.png) no-repeat ;
+      overflow: hidden;
+      i {
+        background: url(https://image.converse.com.cn/images/detail/detail.png) no-repeat;
         display: block;
         width: 30px;
         height: 30px;
         position: absolute;
       }
+      span {
+        float: left;
+        text-indent: 40px;
+      }
     }
   }
+  // 加入收藏
+  .ensh {
+    margin-top: 20px;
+    height: 30px;
+    width: auto;
+    line-height: 30px;
+    font-size: 14px;
+    color: #333;
+    position: relative;
+    i {
+      background: url(https://image.converse.com.cn/images/detail/detail.png) no-repeat 0 -43px;
+      display: block;
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      overflow: hidden;
+    }
+    span {
+      text-indent: 40px;
+      float: left;
+    }
+  }
+  // 五星好评
+  .eva {
+    margin-top: 20px;
+    overflow: hidden;
+    position: relative;
+    span {
+      float: left;
+      width: 100px;
+      height: 30px;
+      background: url(https://image.converse.com.cn/images/detail/stars.png) repeat-x 0 0;
+      overflow: hidden;
+      display: block;
+      text-indent: 40px;
+    }
+  }
+  // 中间图片
   .pic {
     float: right;
+    position: relative;
+    // 标题
+    .title {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      text-align: center;
+      h1 {
+        font-size: 24px;
+        font-weight: bold;
+      }
+      span {
+        font-size: 24px;
+        font-weight: bold;
+      }
+    }
+    // 大放大镜
+    .bf {
+      height: 550px;
+      width: 200px;
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: -200px;
+      display: none;
+      img{
+        width: 1600px;
+        height: 1600px;
+        position: absolute;
+      }
+    }
+    // 小图
+    .spic {
+      margin-top: 70px;
+      margin-left: 60px;
+      position: relative;
+      img{
+        width: 480px;
+        height: 480px;
+      }
+      .sf {
+        width: 40px;
+        height: 150px;
+        background: #fff;
+        opacity: 0.6;
+        position: absolute;
+        bottom: 0;
+        left: 200px;
+        cursor: move;
+        display: none;
+      }
+    }
   }
 }
+// 小图
+
+.list-pic {
+  overflow: hidden;
+  margin-left: 60px;
+  a {
+    margin-top: 20px;
+    margin-left: 10px;
+    float: left;
+    img {
+      padding: 5px;
+      display: block;
+      width: 60px;
+      height: 60px;
+    }
+    .border {
+      border: 1px solid #ccc;
+    }
+  }
+}
+// 按钮
 .by-warp {
-  float: left;
+  float: right;
+  width: 200px;
+  margin-top: 180px;
+  select {
+    width: 90px;
+    text-align: center;
+    option {
+      text-align: center;
+    }
+  }
+  .chima,
+  .amount {
+    overflow: hidden;
+    margin-bottom: 20px;
+    position: relative;
+    b {
+      height: 30px;
+      width: 90px;
+      color: #333;
+      font-size: 12px;
+      line-height: 30px;
+      float: left;
+    }
+    input {
+      float: right;
+      height: 30px;
+      width: 90px;
+      text-align: center;
+      line-height: 30px;
+      border: 1px solid #ccc;
+    }
+  }
+  .btn {
+    span{
+      font-size: 16px;
+      color: #fff;
+      display: block;
+      background-color: #940000;
+      font-weight: bold;
+      text-align: center;
+      height: 50px;
+      width: 200px;
+      line-height: 50px;
+      cursor: pointer;
+      margin-bottom: 2px;
+    }
+    span:hover{
+      opacity: .8;
+    }
+  }
 }
